--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -81,6 +81,9 @@
 
   /* 设置内容区域最大宽度 */
   --c-container-maxwidth: 768px;
+
+  /* 阴影 */
+  --c-box-shadow: 0 -1px 4px rgb(0 0 0 / 15%);
 }
 
 body.dark-theme {
